# setuptools-conda

./: .pre-commit-config.yaml  README.md  setup.cfg
src/setuptools_conda/: generation.py
tests/: test_generation.py
