[metadata]
name = setuptools_conda
description = auxiliary setuptools to help the integration with conda
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marcelotrevisani/setuptools_conda/
author = Marcelo Duarte Trevisani
author_email = contact@marcelotrevisani.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Version Control
    Topic :: System :: Software Distribution
    Topic :: Utilities

[options]
packages = find:
install_requires =
    conda-souschef>=1.0.0
    setuptools
python_requires = >=3.6
package_dir =
    =src
zip_safe = true

[options.packages.find]
where = src

[options.entry_points]
distutils.setup_keywords =
    generate_conda_recipe = setuptools_conda.generation:generate_conda_recipe
